--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,32 +22,36 @@ a {
     list-style: none;
 }
 
-.banner img {
-    background-image: url(../img/banner.jpg) ;
-width: 100%;
-}
-
-.logo {
-
-}
-
-.banner {
-    height: 500px;
-}
-
-h1 {
+h1, h3 {
     color: white;
-    text-align: center;
+    margin-bottom: 0px;
 }
 
-section {
+#banner {
+    background-image: url(../img/banner.jpg);
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 65vh;
+}
+
+#banner img {
+    width: 60%;
+}
+
+#survive {
     text-align: center;
+    width: 70%;
+    margin: 3rem auto;
 }
 
 .savoirplus {
     background-color: brown;
     color: white;
-    padding: 10px 15px;
+    padding: 5px 15px;
+    border-radius: 5px;
 }
 
 .titre-actualite {
@@ -76,4 +80,43 @@ section {
 
 .news-txt {
     padding-left: 1rem;
+}
+
+.newsletter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
+
+#newsletter-back {
+    background-color: rgb(48, 48, 48);
+    color: white;
+    padding-top: 2rem;
+    margin-top: 2rem;
+}
+
+input {
+    margin-right: 5px;
+}
+
+#foot {
+    background-color: black;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.logo-foot img {
+    width: 5%;
+}
+
+.bot-menu {
+    list-style: none;
+    font-size: 10px;
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    padding-right: 5rem;
+    width: 1000px;
 }
