--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,11 @@ a {
     list-style: none;
 }
 
+.bartop::before{
+    content: "|";
+    margin-right: 1rem;
+}
+
 h1, h3 {
     color: white;
     margin-bottom: 0px;
@@ -55,6 +60,7 @@ h1, h3 {
 }
 
 .titre-actualite {
+    text-align: center;
     margin-top: 5rem;
     margin-bottom: 2rem;
 }
@@ -116,7 +122,7 @@ input {
 }
 
 #foot .logo-foot img {
-    width: 70%;
+    width: 50%;
     margin-left: 5rem;
 }
 
@@ -125,6 +131,7 @@ input {
     gap: 16px;
     font-size: 8px;
     margin-right: 5rem;
+    align-items: center
 }
 
 .bot-menu{
@@ -134,4 +141,9 @@ input {
 #foot .bot-menu a {
     color: white;
 }
-g
+
+.bar::before{
+    content: "|";
+    color: white;
+    margin-right: 1rem;
+}
